fix: overflow

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 
 body {
   font-family: 'Playfair Display', serif;
+  overflow-x: hidden;
 }
 
 .App {
